--- a/style.css
+++ b/style.css
@@ -14,30 +14,36 @@ body, html {
     background-color: #f0f0f0;
 }
 
-.wrapper {
-    padding: 20px;
+.container {
     width: 450px;
     background-color: #ffffff;
     border-radius: 16px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
+.wrapper {
+    padding: 20px;
+}
+
 
 /* Login and Sign up Form CSS Code */
-.header {
-    font-size: 25px;
+.title {
+    font-size: 15px;
     font-weight: 600;
     border-bottom: 2px solid #e3e3e3;
     margin-bottom: 10px;
 }
 
-form .section {
+.header {
     text-align: center;
-    font-size: 20px;
-    font-weight: 500;
 }
 
-form .error {
+.header h3 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.error-txt {
     font-size: 15px;
     font-weight: 300;
     margin: 10px 0px;
@@ -49,18 +55,18 @@ form .error {
     border: 1px solid #ff9191;
 }
 
-form .field {
+.form-input {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
 }
 
-form .field label {
+.form-input label {
     font-size: 16px;
     font-weight: 400;
 }
 
-form .field input:not(input[type='file']) {
+.form-input input {
     position: relative;
     outline: none;
     width: 100%;
@@ -72,28 +78,28 @@ form .field input:not(input[type='file']) {
     border: 1px solid #e3e3e3;
 }
 
-.icon {
+.form-input i {
     position: absolute;
     color: #f19393;
     transform: translate(385px, 33px);
     cursor: pointer;
 }
 
-form .field input:focus {
+.form-input input:focus {
     border: 1px solid #b7b7b7;
 }
 
-form .field input::placeholder {
+.form-input input::placeholder {
     font-size: 14px;
     font-weight: 300;
 }
 
-form .button {
+.form-button {
     margin: 20px 0px;
     text-align: center;
 }
 
-form .button button {
+.form-button button {
     font-size: 15px;
     color: #fdfdfd;
     height: 35px;
@@ -103,99 +109,100 @@ form .button button {
     background-color: #1c1c1c;
 }
 
-form .button button:hover {
+.form-button button:hover {
     cursor: pointer;
     background-color: #4d4d4d;
 }
 
-form .small {
+.account-promt {
     text-align: center;
     font-size: 12px;
     font-weight: 300;
 }
 
-form .small a:hover {
+.account-promt a:hover {
     text-decoration: underline;
 }
 
 
 /* Sign Up style */
-form .name {
+.input-name {
     display: flex;
 }
 
-form .name .field:first-child {
+.input-name .form-input:first-child {
     margin-right: 16px;
 }
 
-form .name .field:last-child {
+.input-name .form-input:last-child {
     margin-left: 16px;
 }
 
-.file {
+.form-file {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-file input {
     appearance: none;
     -webkit-appearance: none;
     border: none;
 }
 
-.picture {
+.preview-img {
     max-width: 150px;
     margin: 5px 0px;
 }
 
 
 /* Chat List Styles */
-.content {
-    padding: 5px;
-    height: 500px;
-}
-
-.content header {
+.header-chat-list {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px;
     padding-bottom: 10px;
     margin-bottom: 15px;
     border-bottom: 2px solid #e3e3e3;
 }
 
-.content header .user-info img {
+.header-chat-list .user-info img {
     max-width: 50px;
     border-radius: 50%;
 }
 
-.content header .user-info {
+.header-chat-list .user-info {
     display: flex;
     align-items: center;
 }
 
-.content header .user-info .text {
+.header-chat-list .user-info .text {
     margin-left: 10px;
 }
 
-.content header .user-info .text h3 {
+.header-chat-list .user-info .text h3 {
     font-size: 17px;
     font-weight: 600;
 }
 
-.content header .user-info .text p {
+.header-chat-list .user-info .text p {
     font-size: 12px;
 }
 
-.content header a {
+.header-chat-list a {
     font-size: 14px;
 }
 
-.content header a:hover {
+.header-chat-list a:hover {
     text-decoration: underline;
 }
 
-.content .search {
+.search-box {
     display: flex;
     margin-bottom: 10px;
 }
 
-.content .search input {
+.search-box input {
     width: calc(100% - 35px);
     height: 35px;
     padding: 10px;
@@ -204,7 +211,7 @@ form .name .field:last-child {
     outline: none;
 }
 
-.content .search button {
+.search-box button {
     width: 35px;
     background-color: #000000;
     color: #ffdfdf;
@@ -212,15 +219,14 @@ form .name .field:last-child {
     cursor: pointer;
 }
 
-.content .chat {
+.chat-box {
     height: 375px;
     overflow-y: auto;
 }
 
-.content .chat-box {
+.chat {
     display: flex;
-    padding: 7px 4px;
-    margin: 10px 0px;
+    padding: 12px 4px;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #e3e3e3;
@@ -231,45 +237,81 @@ form .name .field:last-child {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 } */
 
-.content .chat-box .chat-user {
+.chat-box .chat .chat-left {
     display: flex;
     align-items: center;
 }
 
-.content .chat-box img {
+.chat-box .chat .chat-left img {
     max-width: 50px;
     border-radius: 50%;
 }
 
-.content .chat-box .chat-user .text {
+.chat-box .chat-left .text {
     margin-left: 10px;
 }
 
-.content .chat-box .chat-user .text h4 {
+.chat-box .chat-left .text h4 {
     font-size: 15px;
     font-weight: 600;
 }
 
-.content .chat-box .chat-user .text p {
+.chat-box .chat-left .text p {
     font-size: 10px;
     color: #9d9d9d;
 }
 
 /* Chat Styles */
-.content .user-info i {
+.wrapper-chat {
+    padding: 10px;
+}
+
+.header-chat {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    padding: 10px;
+    border-bottom: 2px solid #e3e3e3;
+}
+
+.header-chat .user-info img {
+    max-width: 50px;
+    border-radius: 50%;
+}
+
+.header-chat .user-info {
+    display: flex;
+    align-items: center;
+}
+
+.header-chat .user-info .text {
+    margin-left: 10px;
+}
+
+.header-chat .user-info .text h3 {
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.header-chat .user-info .text p {
+    font-size: 12px;
+}
+
+.header-chat .user-info i {
     font-size: 20px;
     margin-right: 5px;
     cursor: pointer;
 }
 
-.chat-message {
-    height: 380px;
+.wrapper-message {
+    height: 450px;
     overflow-y: auto;
-    background-color: #fbfbfb;
+    background-color: #fdfdfd;
     /* border-radius: 20px; */
 }
 
-.chat-message .chat-bubble {
+.wrapper-message .chat-bubble {
     word-wrap: break-word;
     width: calc(100% - 100px);
     padding: 15px;
@@ -278,25 +320,61 @@ form .name .field:last-child {
     box-shadow: 0 2px 40px rgba(0, 0, 0, 0.1);
 }
 
-.chat-message .bubble-right {
+.wrapper-message .bubble-right {
     margin-left: auto;
     color: #ededed;
     background-color: #494646;
     border-radius: 20px 20px 0px 20px;
 }
 
-.chat-message .bubble-left {
+.wrapper-message .bubble-left {
     color: #3b3b3b;
     background-color: #ffffff;
     border-radius: 20px 20px 20px 0px;
 }
 
-.chat-message .chat-bubble .message {
+.wrapper-message .chat-bubble .message {
     font-size: 15px;
 }
 
-.chat-message .chat-bubble .timestamp {
+.wrapper-message .chat-bubble .timestamp {
     display: block;
     text-align: right;
     font-size: 10px;
+}
+
+.message-box-wrapper {
+    padding: 20px;
+}
+
+.message-box {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.message-box input {
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    outline: none;
+    border: 1px solid #c5c5c5;
+    border-radius: 10px 0px 0px 10px;
+}
+
+.message-box .icon i {
+    font-size: 18px;
+}
+
+.message-box .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    color: #f0f0f0;
+    background-color: #1c1c1c;
+    border-radius: 0px 10px 10px 0px;
+    cursor: pointer;
 }
