--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body, html {
 }
 
 .error-txt {
+    display: none;
     font-size: 15px;
     font-weight: 300;
     margin: 10px 0px;
@@ -53,6 +54,23 @@ body, html {
     text-align: center;
     border-radius: 5px;
     border: 1px solid #ff9191;
+}
+
+.success-txt {
+    display: none;
+    font-size: 15px;
+    font-weight: 300;
+    margin: 10px 0px;
+    color: #00bb4b;
+    background-color: #d8ffe4;
+    padding: 8px 10px;
+    text-align: center;
+    border-radius: 5px;
+    border: 1px solid #afef86;
+}
+
+.form {
+    margin-top: 20px;
 }
 
 .form-input {
@@ -75,7 +93,7 @@ body, html {
     font-weight: 300;
     padding: 0 10px;
     border-radius: 5px;
-    border: 1px solid #e3e3e3;
+    border: 1px solid #dadada;
 }
 
 .form-input i {
@@ -122,6 +140,13 @@ body, html {
 
 .account-promt a:hover {
     text-decoration: underline;
+}
+
+.error-input {
+    display: none;
+    font-size: 12px;
+    color: #f33939;
+    margin-left: 5px;
 }
 
 
